--- a/share/man/man5/pf.conf.5
+++ b/share/man/man5/pf.conf.5
@@ -27,7 +27,7 @@
 .\" ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd February 14, 2025
+.Dd April 9, 2025
 .Dt PF.CONF 5
 .Os
 .Sh NAME
@@ -167,7 +167,7 @@ will be cleared on load.
 .El
 .Pp
 Tables may be defined with the following attributes:
-.Bl -tag -width persist
+.Bl -tag -width counters
 .It Ar persist
 The
 .Ar persist
