--- a/share/man/man7/arch.7
+++ b/share/man/man7/arch.7
@@ -24,7 +24,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd February 4, 2025
+.Dd April 11, 2025
 .Dt ARCH 7
 .Os
 .Sh NAME
@@ -248,7 +248,7 @@ as the default compiler on all supported CPU architectures,
 LLVM's
 .Xr ld.lld 1
 as the default linker, and
-ELF Tool Chain binary utilities such as
+LLVM binary utilities such as
 .Xr objcopy 1
 and
 .Xr readelf 1 .
