--- a/stand/defaults/loader.conf.5
+++ b/stand/defaults/loader.conf.5
@@ -410,6 +410,10 @@ be displayed.
 If set to
 .Dq YES ,
 the beastie boot menu will be skipped.
+.It Va loader_autoboot_show Pq Dq Li YES
+If set to
+.Dq NO ,
+the autoboot menu will not be displayed
 .It Va loader_logo Pq Dq Li orbbw
 Selects a desired logo in the beastie boot menu.
 Possible values are:
