loader: Add loader_menu
If set to 'none' then the menu isn't displayed.
The 'brand' and 'logo' part are stil displayed.

Differential Revision:	https://reviews.freebsd.org/D49820
Reviewed by:	imp, kevans
Sponsored by:	Beckhoff Automation GmbH & Co. KG

--- a/stand/defaults/loader.conf.5
+++ b/stand/defaults/loader.conf.5
@@ -424,6 +424,10 @@ Possible values are:
 .Dq Li beastie ,
 and
 .Dq Li none .
+.It Va loader_menu
+If set to
+.Dq NONE ,
+the menu will not be displayed
 .It Va loader_color
 If set to
 .Dq NO ,
