top.1: top does not accept uids
MFC after:		3 days
Reviewed by:		carlavilla, imp
Approved by:		carlavilla (mentor)
Differential Revision:	https://reviews.freebsd.org/D49631

(cherry picked from commit 92e9e13f061f9fc6411169768f5894f26fa80aaf)

--- a/usr.bin/top/top.1
+++ b/usr.bin/top/top.1
@@ -1,4 +1,4 @@
-.Dd March 25, 2025
+.Dd April 1, 2025
 .Dt TOP 1
 .Os
 .Sh NAME
@@ -13,7 +13,7 @@
 .Op Fl o Ar field
 .Op Fl p Ar pid
 .Op Fl s Ar time
-.Op Fl U Ar uid
+.Op Fl U Ar username
 .Op Ar number
 .Sh DESCRIPTION
 .Nm
