top.1: Add HISTORY
top was added in 511d9c656578 for FreeBSD 2.2.2.

MFC after:		3 days
Reviewed by:		carlavilla, imp, joerg
Approved by:		carlavilla (mentor)
Differential Revision:	https://reviews.freebsd.org/D49591

(cherry picked from commit a9f5dcf82941e7e211490432b93bd124e7c0a57d)

--- a/usr.bin/top/top.1
+++ b/usr.bin/top/top.1
@@ -520,6 +520,10 @@ flag is specified.
 .Xr humanize_number 3 ,
 .Xr mem 4 ,
 .Xr renice 8
+.Sh HISTORY
+.Nm
+first appeared in
+.Fx 2.2.2 .
 .Sh AUTHORS
 .An William LeFebvre, EECS Department, Northwestern University
 .Sh BUGS
