--- a/usr.bin/tee/tee.1
+++ b/usr.bin/tee/tee.1
@@ -30,7 +30,7 @@
 .\"
 .\"     @(#)tee.1	8.1 (Berkeley) 6/6/93
 .\"
-.Dd October 30, 2022
+.Dd December 25, 2024
 .Dt TEE 1
 .Os
 .Sh NAME
@@ -71,6 +71,12 @@ utility takes the default action for all signals,
 except in the event of the
 .Fl i
 option.
+.Pp
+This implementation of the
+.Nm
+utility may also write to
+.Xr unix 4
+sockets.
 .Sh EXIT STATUS
 .Ex -std
 .Sh EXAMPLES
