libbe: attempt to remove autocreated mountpoints at unmount time
We use a be_mount.XXXX pattern to mkdtemp(3) when creating these, which
seems reasonably unique enough to just continue using that.  Record the
mountpoint of the root dataset and check the dirname of that for the
auto-creation trait.  There's no sense in this bubbling up an error to
callers, so we'll just ignore an error for now.

Requested by:	manu

(cherry picked from commit d6fbae084a2a0e07805633ca46935963357f1efa)

--- a/lib/libbe/libbe.3
+++ b/lib/libbe/libbe.3
@@ -392,6 +392,13 @@ This list of properties matches the properties collected by
 The
 .Fn be_unmount
 function will unmount the given boot environment.
+If the mount point looks like it was created by
+.Fn be_mount ,
+then
+.Fn be_unmount
+will attempt to
+.Xr rmdir 2
+the mountpoint after a successful unmount.
 Setting the
 .Dv BE_MNT_FORCE
 flag will pass
