--- a/lib/libbe/libbe.3
+++ b/lib/libbe/libbe.3
@@ -25,7 +25,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd April 9, 2024
+.Dd April 20, 2025
 .Dt LIBBE 3
 .Os
 .Sh NAME
@@ -358,6 +358,10 @@ If
 is
 .Dv NULL ,
 a mount point will be generated in
+.Ev TMPDIR
+or, if
+.Ev TMPDIR
+is not set,
 .Pa /tmp
 using
 .Xr mkdtemp 3 .
