--- a/bin/getfacl/getfacl.1
+++ b/bin/getfacl/getfacl.1
@@ -28,7 +28,7 @@
 .\" Developed by the TrustedBSD Project.
 .\" Support for POSIX.1e access control lists.
 .\"
-.Dd September 4, 2009
+.Dd June 19, 2023
 .Dt GETFACL 1
 .Os
 .Sh NAME
@@ -54,7 +54,7 @@ an ACL containing only the required ACL entries.
 .Pp
 The following option is available:
 .Bl -tag -width indent
-.It Fl d
+.It Fl d , Fl -default
 The operation applies to the default ACL of a directory instead of the
 access ACL.
 An error is generated if a default ACL cannot be associated with
@@ -67,11 +67,11 @@ the symbolic link itself rather than following the link.
 For NFSv4 ACLs, append numerical ID at the end of each entry containing
 user or group name.
 Ignored for POSIX.1e ACLs.
-.It Fl n
+.It Fl n , Fl -numeric
 Display user and group IDs numerically rather than converting to
 a user or group name.
 Ignored for POSIX.1e ACLs.
-.It Fl q
+.It Fl q , Fl -omit-header
 Do not write commented information about file name and ownership.
 This is
 useful when dealing with filenames with unprintable characters.
