getfacl: implement --skip-base (-s)
This skips files that only have a trivial ACL, which is useful for
callers that want to examine files with more unique ACLs.

While we're here, don't issue the file name/ownership header if we're
just going to error out on the file; this adds extra noise for little
gain.

Reviewed by:	markj, olce
Sponsored by:	Klara, Inc.
Differential Revision:	https://reviews.freebsd.org/D40603

--- a/bin/getfacl/getfacl.1
+++ b/bin/getfacl/getfacl.1
@@ -75,6 +75,11 @@ Ignored for POSIX.1e ACLs.
 Do not write commented information about file name and ownership.
 This is
 useful when dealing with filenames with unprintable characters.
+.It Fl s , Fl -skip-base
+Skip files that only have a trivial ACL, as defined by
+.Xr acl_is_trivial_np 3 .
+Notably, files with POSIX.1e ACLs that only represent the owner, group and other
+to match the mode of the file will be skipped.
 .It Fl v
 For NFSv4 ACLs, display access mask and flags in a verbose form.
 Ignored for POSIX.1e ACLs.
