--- a/share/man/man5/pf.conf.5
+++ b/share/man/man5/pf.conf.5
@@ -27,7 +27,7 @@
 .\" ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd April 9, 2025
+.Dd April 22, 2025
 .Dt PF.CONF 5
 .Os
 .Sh NAME
@@ -1729,8 +1729,8 @@ The keywords
 .Cm all , matches , to ,
 and
 .Cm user
-are all optional,
-and can be combined using commas.
+are optional and can be combined using commas,
+but must be enclosed in parentheses if given.
 .Pp
 Use
 .Cm all
