--- a/sbin/mount/mount.8
+++ b/sbin/mount/mount.8
@@ -547,6 +547,10 @@ for more information.)
 .It Pa /etc/fstab
 file system table
 .El
+.Sh EXAMPLES
+Remount the root filesystem with read-write permissions:
+.Pp
+.Dl mount -uw /
 .Sh DIAGNOSTICS
 Various, most of them are self-explanatory.
 .Pp
